# semanifold

./: .cspell.json  .gitignore  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changes/: add-get-start.md  add-version-cli.md  assets.md  bump-tips.md  bump-version-for-semifold-cpp-support.md  bump-version-through-semifold.md  changelog.md  chore-readme.md  ci-post-version.md  ci-release.md  cli-repo-root.md  commit-i18n.md  config-default.md  config.toml  default-resolver-config.md  dirty-publish.md  docs-global-assets.md  docs-script-install.md  docs.md  dry-run-cmd.md  dry-run-global.md  emit-changelog-file.md  enhance-i18n.md  feat-dynamic-support.md  feat-python-resolver.md  filename-sanitize.md  fix-bot-name.md  fix-build.md  fix-changelog-fmt.md  fix-ci-release.md  fix-cli-about.md  fix-command-arg.md  fix-single-crate.md  git-repo-clean-check-fix.md  git-repo-dirty-check-fix.md  github-action-bot-email.md  github-release.md  glob-pattern.md  id-token-for-nodejs.md  ignore-asset-dir-error.md  (+43 more)
.github/workflows/: build.yaml  docs-deploy.yaml  semifold-ci.yaml  semifold-status.yaml  status.yaml  unit-test.yaml  version.yaml
Doc/: package.json  pnpm-lock.yaml  rspress.config.ts
Doc/docs/: custom.css
crates/changelog/: CHANGELOG.md  Cargo.toml
crates/changelog/src/: lib.rs  types.rs  utils.rs
crates/resolver/: CHANGELOG.md  Cargo.toml
crates/resolver/src/: analyzer.rs  changeset.rs  config.rs  context.rs  error.rs  lib.rs  resolver.rs  utils.rs
crates/resolver/src/analyzer/: rust.rs
crates/resolver/src/resolver/: cpp.rs  mod.rs  nodejs.rs  python.rs  rust.rs  toml_serializer.rs
crates/semanifold/: Cargo.toml
crates/semanifold/locales/: en.toml  zh.toml
crates/semanifold/src/: cli.rs  i18n.rs  logger.rs  main.rs  utils.rs
crates/semanifold/src/cli/: add.rs  ci.rs  commit.rs  init.rs  publish.rs  status.rs  version.rs
crates/semifold/: CHANGELOG.md  Cargo.toml
crates/semifold/assets/: semifold-ci.yaml.jinja  semifold-status.yaml.jinja  status.yaml
crates/semifold/locales/: en.toml  zh.toml
crates/semifold/src/: cli.rs  lib.rs  logger.rs  main.rs  run.rs  smif.rs  utils.rs
crates/semifold/src/cli/: ci.rs  commit.rs  init.rs  publish.rs  status.rs  version.rs
docs/: CHANGELOG.md  env.d.ts  i18n.json  package.json  pnpm-lock.yaml  rspress.config.ts  tsconfig.json
docs/docs/: index.md
docs/docs/en/: _meta.json  index.md
docs/docs/en/guide/: _meta.json
docs/docs/en/guide/start/: index.md  quick-start.mdx
docs/docs/en/guide/start/components/: tab-label.tsx
docs/docs/guide/: index.md
docs/docs/public/install/: install.ps1  install.sh
docs/docs/zh/: _meta.json  index.md
docs/docs/zh/guide/start/: index.md  quick-start.mdx
