[package]
name = "semifold-changelog"
version = "0.2.0"
edition.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.99"
git2 = { version = "0.20.2", features = ["vendored-openssl"] }
octocrab = "0.47.0"
pathdiff = "0.2.3"
regex = "1.12.2"
semifold-resolver = { version = "0.2.0", path = "../resolver" }
