[package]
name = "semanifold-resolver"
version = "0.1.0"
edition = "2024"
description = "Next-generation cross-language monorepo version and release management tool"
license = "AGPL-3.0-only"
documentation = "https://docs.rs/semanifold"
homepage = "https://github.com/noctisynth/semanifold"
repository = "https://github.com/noctisynth/semanifold"

[dependencies]
anyhow = "1.0.99"
glob = "0.3.3"
log = "0.4.27"
pathdiff = "0.2.3"
saphyr = "0.0.6"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.15"
toml_edit = { version = "0.23.3", features = ["serde"] }
