[package]
name = "semifold-resolver"
version = "0.1.13"
edition.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
git2 = "0.20.2"
glob = "0.3.3"
log = "0.4.27"
pathdiff = "0.2.3"
saphyr = "0.0.6"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.15"
toml_edit = { version = "0.23.3", features = ["serde"] }
