[package]
name = "semifold-resolver"
version = "0.2.1"
edition.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
git2 = { version = "0.20.2", features = ["vendored-openssl"] }
glob = "0.3.3"
log = "0.4.27"
pathdiff = "0.2.3"
regex = "1.11.1"
saphyr = "0.0.6"
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["preserve_order"] }
thiserror = "2.0.15"
toml_edit = { version = "0.23.3", features = ["serde"] }
