[package]
name = "semanifold"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
colored = "3.0.0"
fern = "0.7.1"
inquire = "0.7.5"
log = "0.4.27"
saphyr = "0.0.6"
semanifold-resolver = { version = "0.1.0", path = "../resolver" }
toml = "0.9.5"
