[package]
name = "semanifold"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
colored = "3.0.0"
fern = "0.7.1"
glob = "0.3.3"
inquire = "0.7.5"
log = "0.4.27"
rust-i18n = "3.1.5"
saphyr = "0.0.6"
semanifold-resolver = { version = "0.1.0", path = "../resolver" }
sys-locale = "0.3.2"
toml_edit = "0.23.3"
