[package]
name = "semifold"
version = "0.1.13"
edition.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true

[[bin]]
name = "semifold"
path = "src/main.rs"

[[bin]]
name = "smif"
path = "src/smif.rs"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
colored = "3.0.0"
fern = "0.7.1"
git2 = "0.20.2"
inquire = "0.9.1"
log = "0.4.27"
octocrab = "0.47.0"
rust-i18n = "3.1.5"
saphyr = "0.0.6"
semifold-resolver = { version = "0.1.0", path = "../resolver" }
semifold-changelog = { version = "0.1.0", path = "../changelog" }
sys-locale = "0.3.2"
tokio = { version = "1.48.0", features = ["full"] }
toml_edit = "0.23.3"
rust-embed = "8.8.0"
reqwest = "0.12.24"
minijinja = "2.12.0"
serde_json = "1.0.145"
serde = "1.0.228"
bytes = "1.10.1"
