[package]
name = "semifold"
version = "0.2.5"
edition.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true

[[bin]]
name = "semifold"
path = "src/main.rs"

[[bin]]
name = "smif"
path = "src/smif.rs"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
colored = "3.0.0"
fern = "0.7.1"
git2 = { version = "0.20.2", features = ["vendored-openssl"] }
inquire = "0.9.1"
log = "0.4.27"
octocrab = "0.47.0"
rust-i18n = "3.1.5"
saphyr = "0.0.6"
semifold-resolver = { version = "0.2.1", path = "../resolver" }
semifold-changelog = { version = "0.2.0", path = "../changelog" }
sys-locale = "0.3.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
toml_edit = "0.23.3"
rust-embed = "8.8.0"
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "rustls-tls-native-roots",
] }
minijinja = { version = "2.12.0", default-features = false }
serde_json = "1.0.145"
serde = "1.0.228"
bytes = "1.10.1"
semver = "1.0.27"
